# codingames

./: .gitignore  README.md  codingames.cabal  stack.yaml
src/: CGXFormatter.hs  Descent.hs  PowerOfThor.hs  ShadowsOfTheKnight.hs  SkynetRevolution.hs  SkynetRevolution2.hs  SuperComputer.hs  TheResistance.hs  VoxCodei.hs  War.hs
test/: CGXFormatterSpec.hs  SkynetRevolution2Spec.hs  Spec.hs  SuperComputerSpec.hs  TheResistanceSpec.hs  VoxCodeiSpec.hs  WarSpec.hs
test/input/: warspec_1.txt  warspec_2.txt  warspec_3.txt  warspec_4.txt  warspec_5.txt  warspec_9.txt
test/input/cgxformatter/: spec_1.txt  spec_10.txt  spec_11.txt  spec_12.txt  spec_4.txt  spec_5.txt  spec_7.txt  spec_8.txt  spec_9.txt
test/input/skynetrevolution2/: spec_1.txt  spec_2.txt  spec_3.txt  spec_4.txt  spec_5.txt  spec_6.txt
test/input/supercomputer/: spec_1.txt  spec_2.txt
test/input/theresistance/: spec_5.txt  spec_6.txt  spec_7.txt  spec_8.txt  spec_9.txt
test/input/voxcodei/: spec_1.txt  spec_10.txt  spec_11.txt  spec_2.txt  spec_3.txt  spec_4.txt  spec_5.txt  spec_6.txt  spec_7.txt  spec_9.txt
test/input/war/: warspec_6.txt  warspec_7.txt  warspec_8.txt
test/output/war/: warspec_7.txt
