name:                codingames
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/codingames#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Descent
                     , CGXFormatter
                     , ShadowsOfTheKnight
                     , SkynetRevolution
                     , SkynetRevolution2
                     , SuperComputer
                     , TheResistance
                     , VoxCodei
                     , War
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , containers
                     , deepseq
                     , fgl
                     , hspec
                     , lens
                     , mtl
                     , parsec
                     , pretty
                     , random
                     , safe
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable codingames-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , codingames
  default-language:    Haskell2010

test-suite codingames-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , codingames
                     , containers
                     , criterion
                     , fgl
                     , hspec
                     , lens
                     , parsec
                     , pretty
                     , QuickCheck
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       SkynetRevolution2Spec
                     , CGXFormatterSpec
                     , PowerOfThor
                     , TheResistanceSpec
                     , VoxCodeiSpec
                     , WarSpec
                     , SuperComputerSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/codingames
